[tool.poetry]
name = "hollar"
version = "0.1.0"
description = ""
authors = ["Scott O'Mary <omaryscott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.7b0"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
